--- a/public/fonts/Switzer/css/switzer.css
+++ b/public/fonts/Switzer/css/switzer.css
@@ -44,9 +44,9 @@
 
 @font-face {
   font-family: 'Switzer-Variable';
-  src: url('../fonts/Switzer-Variable.woff2') format('woff2'),
-       url('../fonts/Switzer-Variable.woff') format('woff'),
-       url('../fonts/Switzer-Variable.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Variable.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Variable.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Variable.ttf') format('truetype');
        font-weight: 100 900;
        font-display: swap;
        font-style: normal;
@@ -66,9 +66,9 @@
 
 @font-face {
   font-family: 'Switzer-VariableItalic';
-  src: url('../fonts/Switzer-VariableItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-VariableItalic.woff') format('woff'),
-       url('../fonts/Switzer-VariableItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-VariableItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-VariableItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-VariableItalic.ttf') format('truetype');
        font-weight: 100 900;
        font-display: swap;
        font-style: italic;
@@ -77,9 +77,9 @@
 
 @font-face {
   font-family: 'Switzer-Thin';
-  src: url('../fonts/Switzer-Thin.woff2') format('woff2'),
-       url('../fonts/Switzer-Thin.woff') format('woff'),
-       url('../fonts/Switzer-Thin.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Thin.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Thin.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Thin.ttf') format('truetype');
        font-weight: 100;
        font-display: swap;
        font-style: normal;
@@ -88,9 +88,9 @@
 
 @font-face {
   font-family: 'Switzer-ThinItalic';
-  src: url('../fonts/Switzer-ThinItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-ThinItalic.woff') format('woff'),
-       url('../fonts/Switzer-ThinItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-ThinItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-ThinItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-ThinItalic.ttf') format('truetype');
        font-weight: 100;
        font-display: swap;
        font-style: italic;
@@ -99,9 +99,9 @@
 
 @font-face {
   font-family: 'Switzer-Extralight';
-  src: url('../fonts/Switzer-Extralight.woff2') format('woff2'),
-       url('../fonts/Switzer-Extralight.woff') format('woff'),
-       url('../fonts/Switzer-Extralight.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Extralight.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Extralight.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Extralight.ttf') format('truetype');
        font-weight: 200;
        font-display: swap;
        font-style: normal;
@@ -110,9 +110,9 @@
 
 @font-face {
   font-family: 'Switzer-ExtralightItalic';
-  src: url('../fonts/Switzer-ExtralightItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-ExtralightItalic.woff') format('woff'),
-       url('../fonts/Switzer-ExtralightItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-ExtralightItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-ExtralightItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-ExtralightItalic.ttf') format('truetype');
        font-weight: 200;
        font-display: swap;
        font-style: italic;
@@ -121,9 +121,9 @@
 
 @font-face {
   font-family: 'Switzer-Light';
-  src: url('../fonts/Switzer-Light.woff2') format('woff2'),
-       url('../fonts/Switzer-Light.woff') format('woff'),
-       url('../fonts/Switzer-Light.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Light.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Light.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Light.ttf') format('truetype');
        font-weight: 300;
        font-display: swap;
        font-style: normal;
@@ -132,9 +132,9 @@
 
 @font-face {
   font-family: 'Switzer-LightItalic';
-  src: url('../fonts/Switzer-LightItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-LightItalic.woff') format('woff'),
-       url('../fonts/Switzer-LightItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-LightItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-LightItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-LightItalic.ttf') format('truetype');
        font-weight: 300;
        font-display: swap;
        font-style: italic;
@@ -143,9 +143,9 @@
 
 @font-face {
   font-family: 'Switzer-Regular';
-  src: url('../fonts/Switzer-Regular.woff2') format('woff2'),
-       url('../fonts/Switzer-Regular.woff') format('woff'),
-       url('../fonts/Switzer-Regular.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Regular.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Regular.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Regular.ttf') format('truetype');
        font-weight: 400;
        font-display: swap;
        font-style: normal;
@@ -154,9 +154,9 @@
 
 @font-face {
   font-family: 'Switzer-Italic';
-  src: url('../fonts/Switzer-Italic.woff2') format('woff2'),
-       url('../fonts/Switzer-Italic.woff') format('woff'),
-       url('../fonts/Switzer-Italic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Italic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Italic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Italic.ttf') format('truetype');
        font-weight: 400;
        font-display: swap;
        font-style: italic;
@@ -165,9 +165,9 @@
 
 @font-face {
   font-family: 'Switzer-Medium';
-  src: url('../fonts/Switzer-Medium.woff2') format('woff2'),
-       url('../fonts/Switzer-Medium.woff') format('woff'),
-       url('../fonts/Switzer-Medium.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Medium.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Medium.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Medium.ttf') format('truetype');
        font-weight: 500;
        font-display: swap;
        font-style: normal;
@@ -176,9 +176,9 @@
 
 @font-face {
   font-family: 'Switzer-MediumItalic';
-  src: url('../fonts/Switzer-MediumItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-MediumItalic.woff') format('woff'),
-       url('../fonts/Switzer-MediumItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-MediumItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-MediumItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-MediumItalic.ttf') format('truetype');
        font-weight: 500;
        font-display: swap;
        font-style: italic;
@@ -187,9 +187,9 @@
 
 @font-face {
   font-family: 'Switzer-Semibold';
-  src: url('../fonts/Switzer-Semibold.woff2') format('woff2'),
-       url('../fonts/Switzer-Semibold.woff') format('woff'),
-       url('../fonts/Switzer-Semibold.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Semibold.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Semibold.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Semibold.ttf') format('truetype');
        font-weight: 600;
        font-display: swap;
        font-style: normal;
@@ -198,9 +198,9 @@
 
 @font-face {
   font-family: 'Switzer-SemiboldItalic';
-  src: url('../fonts/Switzer-SemiboldItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-SemiboldItalic.woff') format('woff'),
-       url('../fonts/Switzer-SemiboldItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-SemiboldItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-SemiboldItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-SemiboldItalic.ttf') format('truetype');
        font-weight: 600;
        font-display: swap;
        font-style: italic;
@@ -209,9 +209,9 @@
 
 @font-face {
   font-family: 'Switzer-Bold';
-  src: url('../fonts/Switzer-Bold.woff2') format('woff2'),
-       url('../fonts/Switzer-Bold.woff') format('woff'),
-       url('../fonts/Switzer-Bold.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Bold.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Bold.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Bold.ttf') format('truetype');
        font-weight: 700;
        font-display: swap;
        font-style: normal;
@@ -220,9 +220,9 @@
 
 @font-face {
   font-family: 'Switzer-BoldItalic';
-  src: url('../fonts/Switzer-BoldItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-BoldItalic.woff') format('woff'),
-       url('../fonts/Switzer-BoldItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-BoldItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-BoldItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-BoldItalic.ttf') format('truetype');
        font-weight: 700;
        font-display: swap;
        font-style: italic;
@@ -231,9 +231,9 @@
 
 @font-face {
   font-family: 'Switzer-Extrabold';
-  src: url('../fonts/Switzer-Extrabold.woff2') format('woff2'),
-       url('../fonts/Switzer-Extrabold.woff') format('woff'),
-       url('../fonts/Switzer-Extrabold.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Extrabold.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Extrabold.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Extrabold.ttf') format('truetype');
        font-weight: 800;
        font-display: swap;
        font-style: normal;
@@ -242,9 +242,9 @@
 
 @font-face {
   font-family: 'Switzer-ExtraboldItalic';
-  src: url('../fonts/Switzer-ExtraboldItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-ExtraboldItalic.woff') format('woff'),
-       url('../fonts/Switzer-ExtraboldItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-ExtraboldItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-ExtraboldItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-ExtraboldItalic.ttf') format('truetype');
        font-weight: 800;
        font-display: swap;
        font-style: italic;
@@ -253,9 +253,9 @@
 
 @font-face {
   font-family: 'Switzer-Black';
-  src: url('../fonts/Switzer-Black.woff2') format('woff2'),
-       url('../fonts/Switzer-Black.woff') format('woff'),
-       url('../fonts/Switzer-Black.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-Black.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-Black.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-Black.ttf') format('truetype');
        font-weight: 900;
        font-display: swap;
        font-style: normal;
@@ -264,9 +264,9 @@
 
 @font-face {
   font-family: 'Switzer-BlackItalic';
-  src: url('../fonts/Switzer-BlackItalic.woff2') format('woff2'),
-       url('../fonts/Switzer-BlackItalic.woff') format('woff'),
-       url('../fonts/Switzer-BlackItalic.ttf') format('truetype');
+  src: url('/fonts/Switzer/fonts/Switzer-BlackItalic.woff2') format('woff2'),
+       url('/fonts/Switzer/fonts/Switzer-BlackItalic.woff') format('woff'),
+       url('/fonts/Switzer/fonts/Switzer-BlackItalic.ttf') format('truetype');
        font-weight: 900;
        font-display: swap;
        font-style: italic;
